# ZeroCore

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
PC/: CMakeLists.txt
assets/ZC/shaders/: ALocations.cpp  Locations.cpp  color.fs  colorFigure.vs  colorTex.fs  line.vs  lineFigure.vs  lineMesh.vs  lineOrientation3D.gs  lineOrientation3D.vs  mesh.vs  meshG.gs  meshG.vs  orthoTexture.fs  point.vs  quadOrientation3D.vs  stencil.vs  stencilBorder.vs  tex.fs  tex.vs  tex_Vertex_TexCoord.vs  text.fs  textScene.vs  textWindow.vs  textWindowIntoScene.vs  texture_Vertex_TexCoord.vs
assets/ZC/shaders/GUI/: gui.fs  gui.gs  gui.vs  gui_text_test.fs  gui_text_test.gs
assets/ZC/shaders/Game/: cubeMap.fs  cubeMap.vs  particle.vs  sphere.fs  sphere.vs  star.vs
assets/shaders/: Locations.cpp  ZC_test.vs  color.vs  line.vs  point.vs  stencil.vs  tex.fs  tex.vs
cmakeGitExternal/: CMakeLists.txt
cmakeGitSubmodules/: CMakeLists.txt
cmakeUnused/: CMakeLists.txt
config/: CMakeLists.txt  ZC_Config.h.in
include/: Ogl.h
include/ZC/Collision/: ZC_CO_Figure.h  ZC_CO_FigureSphere.h  ZC_CO_Surface.h  ZC_CollisionObject.h  ZC_MouseCollisionWindow.h
include/ZC/Events/: ZC_Button.h  ZC_ButtonsCombination.h  ZC_EC.h  ZC_ECTargetPointer.h  ZC_ESignal.h  ZC_Event.h  ZC_EventConnection.h  ZC_Events.h  ZC_Mouse.h  ZC_SingleClickButton.h
include/ZC/Events/Button/: ZC_Button.h  ZC_ButtonID.h  ZC_ButtonOperator.h
include/ZC/File/: ZC_File.h
include/ZC/File/Read/: ZC_FileReader.h
include/ZC/GUI/: ZC_GUI.cpp  ZC_GUI.h  ZC_GUI_Bindings.h  ZC_GUI_Button.cpp  ZC_GUI_Button.h  ZC_GUI_ButtonBase.cpp  ZC_GUI_ButtonBase.h  ZC_GUI_ButtonColor.h  ZC_GUI_ButtonKeyboard.cpp  ZC_GUI_ButtonKeyboard.h  ZC_GUI_ButtonMouse.cpp  ZC_GUI_ButtonMouse.h  ZC_GUI_ButtonMouseAndKeyboard.cpp  ZC_GUI_ButtonMouseAndKeyboard.h  ZC_GUI_ButtonMouseText.h  ZC_GUI_ButtonNumber.h  ZC_GUI_ButtonNumberText.h  ZC_GUI_ButtonState.cpp  ZC_GUI_ButtonState.h  ZC_GUI_CheckBox.h  ZC_GUI_ColorManipulator.cpp  ZC_GUI_ColorManipulator.h  ZC_GUI_Colors.cpp  ZC_GUI_Colors.h  ZC_GUI_Depth.h  ZC_GUI_DrawManager.cpp  ZC_GUI_DrawManager.h  ZC_GUI_DropDown.h  ZC_GUI_EventManager.cpp  ZC_GUI_EventManager.h  ZC_GUI_EventObj.h  ZC_GUI_Font.cpp  ZC_GUI_Font.h  ZC_GUI_FontLoader.cpp  ZC_GUI_FontLoader.h  ZC_GUI_IconUV.cpp  ZC_GUI_IconUV.h  ZC_GUI_Obj.cpp  ZC_GUI_Obj.h  ZC_GUI_ObjBorder.cpp  (+33 more)
include/ZC/GUI/Backend/: ZC_GUI.cpp  ZC_GUI.h  ZC_GUI_CheckBox.cpp  ZC_GUI_CheckBox.h  ZC_GUI_ColorManipulator.cpp  ZC_GUI_ColorManipulator.h  ZC_GUI_Colors.h  ZC_GUI_DDVariant.cpp  ZC_GUI_DDVariant.h  ZC_GUI_DrawManager.cpp  ZC_GUI_DrawManager.h  ZC_GUI_DropDown.cpp  ZC_GUI_DropDown.h  ZC_GUI_EventManager.cpp  ZC_GUI_EventManager.h  ZC_GUI_IconUV.cpp  ZC_GUI_Obj.cpp  ZC_GUI_Obj.h  ZC_GUI_ObjBorder.cpp  ZC_GUI_ObjBorder.h  ZC_GUI_ObjComposite.cpp  ZC_GUI_ObjComposite.h  ZC_GUI_ObjData.cpp  ZC_GUI_ObjData.h  ZC_GUI_Switch.cpp  ZC_GUI_Switch.h  ZC_GUI_SwitchDropDown.cpp  ZC_GUI_SwitchDropDown.h  ZC_cGUI_Number.h
include/ZC/GUI/Button/: ZC_GUI__BM.h  ZC_GUI__Button.h  ZC_GUI__ButtonKeyboard.cpp  ZC_GUI__ButtonKeyboard.h  ZC_GUI__ButtonMouse.cpp  ZC_GUI__ButtonMouse.h  ZC_GUI__ButtonMouseAndKeyboard.cpp  ZC_GUI__ButtonMouseAndKeyboard.h  ZC_GUI__ButtonMouseText.cpp  ZC_GUI__ButtonMouseText.h  ZC_GUI__ButtonNumberText.h  ZC_GUI__Click.cpp  ZC_GUI__Click.h
include/ZC/GUI/Text/: ZC_GUI_Font.cpp  ZC_GUI_Font.h  ZC_GUI_FontLoader.cpp  ZC_GUI_FontLoader.h  ZC_GUI_Text.h  ZC_GUI_TextImmutable.h  ZC_GUI_TextInputWindow.cpp  ZC_GUI_TextInputWindow.h  ZC_GUI_TextManager.cpp  ZC_GUI_TextManager.h  ZC_GUI_TextMutable.h
include/ZC/GUI/Tree/: ZC_GUI__Branch.h  ZC_GUI__Tree.cpp  ZC_GUI__Tree.h
include/ZC/Objects/: ZC_ObjComposite.h  ZC_Object.h
include/ZC/Objects/Camera/: ZC_Camera.h  ZC_Ortho.h  ZC_Perspective.h  ZC_View.h
include/ZC/Tools/: ZC_Array.h  ZC_ButtonManipulator.h  ZC_OrthoSquare.h  ZC_Random.h  ZC_TornToCamera.h  ZC_WindowOrthoIndent.h  ZC_sptr.h  ZC_uptr.h
include/ZC/Video/: ZC_SWindow.h  ZC_Video.h  ZC_Window.h
include/ZC/main/: ZC_main.h
includeVariable/imgui/include/: ZC_IGInputText.h  ZC_IGTextCentered.h  ZC_IGWBM.h  ZC_IGWindow.h  imgui_impl_opengl3_loader.h
src/Audio/: ZC_AudioStream.cpp  ZC_Sound.cpp  ZC_SoundData.cpp  ZC_Sounds.cpp
src/Collision/: ZC_CO_Figure.cpp  ZC_CO_FigureSphere.cpp  ZC_CollisionManager.cpp  ZC_CollisionManager.h  ZC_CollisionObject.cpp  ZC_MouseCollisionWindow.cpp  ZC_MouseCollisionWindowController.cpp  ZC_MouseCollisionWindowController.h
src/Events/: ZC_Button.cpp  ZC_Button.h  ZC_EC.cpp  ZC_Event.cpp  ZC_Events.cpp  ZC_EventsHolder.cpp  ZC_EventsHolder.h  ZC_Mouse.cpp  ZC_Mouse.h  ZC_SingleClickButton.cpp
src/Events/Button/: ZC_Button.cpp  ZC_ButtonClick.cpp  ZC_ButtonClick.h  ZC_ButtonHolder.cpp  ZC_ButtonHolder.h  ZC_ButtonOperator.cpp  ZC_ButtonPressedDown.cpp  ZC_ButtonPressedDown.h  ZC_ButtonUp.cpp  ZC_ButtonUp.h  ZC_ConnectedButton.h
src/File/: ZC_File.cpp
src/File/Read/: ZC_FileReader.cpp
src/Objects/Camera/: ZC_Camera.cpp  ZC_Ortho.cpp  ZC_Perspective.cpp  ZC_View.cpp
src/Objects/Text/: ZC_Font.cpp  ZC_Fonts.cpp  ZC_TextData.cpp  ZC_TextScene.cpp  ZC_TextSceneTurnedToCamera.cpp  ZC_TextWindow.cpp  ZC_TextWindowIntoScene.cpp
src/Tools/: ZC_ButtonManipulator.cpp  ZC_OrthoSquare.cpp  ZC_Random.cpp  ZC_TornToCamera.cpp  ZC_Updater.cpp  ZC_Updater.h  ZC_WindowOrthoIndent.cpp
src/Tools/Container/: SpeedTest.h  ZC_ArrayConverter.cpp  ZC_ArrayConverter.h
src/Tools/Math/: ZC_Math.cpp
src/Tools/SQLite3/: ZC_SQLite3.cpp
src/Tools/Signal/: ZC_SConnection.cpp  ZC_SignalConnection.cpp
src/Tools/Time/: ZC_FPS.cpp  ZC_FPS.h
src/Video/: ZC_SWindow.cpp  ZC_SWindowHolder.cpp  ZC_SWindowHolder.h  ZC_Video.cpp  ZC_Window.cpp  ZC_WindowHolder.cpp  ZC_WindowHolder.h
src/Video/OpenGL/: ZC_FBO.cpp  ZC_FBOBuffersController.cpp  ZC_Framebuffer.cpp  ZC_GLBlend.cpp  ZC_GLDraw.cpp  ZC_OpenGL.cpp  ZC_OpenGL.h  ZC_OpenGLConfig.cpp  ZC_OpenGLConfig.h  ZC_Renderbuffer.cpp  ZC_Viewport.cpp
src/Video/imgui/: ZC_IGRenderer.h  ZC_IGTextCentered.cpp  ZC_IGWBM.cpp  ZC_IGWindow.cpp  ZC_ImGui.cpp  ZC_ImGui.h
(+244 files in other folders)
